# project2

./: README.md  main.py  pyproject.toml
data/: products.json
htmlcov/: index.html
src/: Smart_Grass.py  base_prod.py  exception_class.py  main.py  prod_cat.py
tests/: test_code.py  test_rises.py
